--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,13 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
     <properties>
+        <!--org.springframework.version>4.3.8.RELEASE</org.springframework.version-->
+        <!--org.spring.security.version>4.2.2.RELEASE</org.spring.security.version-->
         <org.springframework.version>4.0.6.RELEASE</org.springframework.version>
         <org.spring.security.version>3.2.4.RELEASE</org.spring.security.version>
         <hibernate.version>4.3.8.Final</hibernate.version>
         <mysql.version>5.1.10</mysql.version>
+        <fasterxml.jackson>2.8.8</fasterxml.jackson>
     </properties>
 
     <build>
@@ -155,17 +158,17 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
-            <version>2.2.2</version>
+            <version>${fasterxml.jackson}</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.2.2</version>
+            <version>${fasterxml.jackson}</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
-            <version>2.2.2</version>
+            <version>${fasterxml.jackson}</version>
         </dependency>
         <dependency>
             <groupId>org.codehaus.jackson</groupId>
@@ -180,7 +183,7 @@
         <dependency>
             <groupId>org.springframework.ws</groupId>
             <artifactId>spring-ws-core</artifactId>
-            <version>2.1.3.RELEASE</version>
+            <version>2.2.0.RELEASE</version>
         </dependency>
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
@@ -215,6 +218,11 @@
             <artifactId>validation-api</artifactId>
             <version>1.1.0.Final</version>
         </dependency>
+        <!--dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>${org.springframework.version}</version>
+        </dependency-->
 
     </dependencies>
     
