--- a/src/application.properties
+++ b/src/application.properties
@@ -7,6 +7,6 @@ database.password=flunky
 
 #Hibernate related properties
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
-hibernate.show_sql=true
+hibernate.show_sql=false
 hibernate.format_sql=true
 hibernate.hbm2ddl.auto=update
