added ClientEnrolment operation

--- a/src/application.properties
+++ b/src/application.properties
@@ -9,4 +9,4 @@ database.password=flunky
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
 hibernate.show_sql=false
 hibernate.format_sql=true
-hibernate.hbm2ddl.auto=update
+hibernate.hbm2ddl.auto=validate
